# glsld

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  ROADMAP.md  flake.nix  vcpkg.json
.github/workflows/: cmake.yml
glsl-analyzer/include/: AstDecl.h  AstPayload.h  Common.h  DiagnosticContext.h  GlslAst.inc  LanguageContext.h  LexContext.h  PPCallback.h  Parser.h  PreprocessContext.h  Preprocessor.h  SourceContext.h  SyntaxToken.h  TypeContext.h
glsl-analyzer/src/: AstContext.cpp  Compiler.cpp  ConstValue.cpp  LexContext.cpp  Parser.cpp  Preprocessor.cpp  StdLibrary.cpp
glsl-docs/BuiltinFunction/: Build.py
glsl-fe/include/: Ast.h  AstBase.h  AstContext.h  AstDecl.h  AstExpr.h  AstImpl.h  AstMisc.h  AstPayload.h  AstPrinter.h  AstStmt.h  AstVisitor.h  AtomTable.h  Common.h  Compiler.h  CompilerContext.h  CompilerTrace.h  ConstEvaluate.h  ConstValue.h  DefaultLibrary.glsl.h  DiagnosticContext.h  FileSystemProvider.h  GlslAst.inc  GlslExprOp.inc  GlslKeywords.inc  GlslType.inc  LexContext.h  MacroExpansion.h  PPCallback.h  ParseContext.h  ParsedAst.h  Parser.h  ParserTrace.h  PreprocessContext.h  Preprocessor.h  Semantic.h  SourceContext.h  SourceInfo.h  SourceScanner.h  StringView.h  SymbolTable.h  (+10 more)
glsl-fe/src/: AstBase.cpp  Compiler.cpp  ConstValue.cpp  FileSystemProvider.cpp  LexContext.cpp  ParseContext.cpp  Parser.cpp  Preprocessor.cpp  StdLibrary.cpp  SymbolTable.cpp  Tokenizer.cpp  TypeChecker.cpp  Typing.cpp
glsl-stdlib/: BuiltinConstants.glsl  BuiltinFunction.py  BuiltinVariables.py  ComposeStdlib.py  Extension.py  README.md  StdlibBuilder.py  builtin-constants.glsl
glsl-stdlib/builtin-functions/: AtomicCounterFunctions.glsl  AtomicMemoryFunctions.glsl  AtomicMemoryFunctions2.glsl  BarrierFunctions.glsl  CommonFunctions.glsl  CommonFunctions2.glsl  DerivativeFunctions.glsl  ExponentialFunctions.glsl  GeometricFunctions.glsl  ImageAtomicFunctions.glsl  ImageAtomicFunctions2.glsl  ImageFunctions.glsl  IntegerFunctions.glsl  InterpolationFunctions.glsl  MatrixFunctions.glsl  MemoryBarrierFunctions.glsl  NoiseFunctions.glsl  TextureGatherFunctions.glsl  TextureLookupFunctions.glsl  TextureQueryFunctions.glsl  TrigonometryFunctions.glsl  VectorRationalFunctions.glsl
glsl-stdlib/extension/: GL_EXT_ray_query.glsl  GL_KHR_memory_scope_semantics.glsl  GL_NV_cooperative_matrix.glsl  GL_NV_shader_sm_builtins.glsl
glsl-stdlib/stage/: ComputeShader.glsl  FragmentShader.glsl  GeometryShader.glsl  RayTracingShaderEXT.glsl  RayTracingShaderNV.glsl  TessControlShader.glsl  TessEvalShader.glsl  VertexShader.glsl
glsld-common/include/: AstBase.h  AstContext.h  AstDecl.h  AstExpr.h  AstMisc.h  AstPayload.h  AstStmt.h  AstVisitor.h  AtomTable.h  CommandLine.h  Common.h  Compiler.h  CompilerTrace.h  ConstValue.h  FileSystemProvider.h  GlslExtension.inc  GlslKeywords.inc  GlslPunctuation.inc  GlslType.inc  LexContext.h  Parser.h  Preprocessor.h  Semantic.h  SourceInfo.h  SourceScanner.h  StringView.h  SymbolTable.h  SyntaxToken.h  Tokenize.Generated.inc  Tokenizer.h  TypeChecker.h  TypeContext.h  Typing.h  VecMat.h
glsld-common/src/: AstBase.cpp  Compiler.cpp  ConstValue.cpp  Parser.cpp  Preprocessor.cpp  SymbolTable.cpp  Tokenizer.cpp  TypeChecker.cpp  Typing.cpp
glsld-core/include/: GenerateTypeInfo.py  GlslAst.inc  GlslKeywords.inc  GlslType.inc
glsld-lexgen/include/: FlatSet.h  LexerBuilder.h
glsld-lexgen/src/: LexerBuilder.cpp  main.cpp
glsld-server/include/: Config.h  DocumentSymbol.h  Hover.h  InlayHints.h  LanguageQueryProvider.h  LanguageQueryVisitor.h  LanguageServer.h  LanguageServerCallback.h  LanguageService.h  Markdown.h  ObjectMapper.h  PreprocessInfoCache.h  PreprocessSymbolStore.h  Protocol.h  SemanticTokens.h  SourceText.h  StandardDocumentation.h  SymbolQuery.h  TransportService.h  Uri.h
glsld-server/src/: CodeCompletion.cpp  Declaration.cpp  DocumentSymbol.cpp  Hover.cpp  InlayHint.cpp  LanguageQueryProvider.cpp  LanguageServer.cpp  LanguageService.cpp  Reference.cpp  SemanticTokens.cpp  SignatureHelp.cpp  SymbolQuery.cpp  TransportService.cpp
glsld-test/include/: AstMatcher.h  AstTestFixture.h  CompilerTestFixture.h  LexingTestFixture.h  ServerTestFixture.h  StringMaker.h  TokenMatcher.h
glsld-test/src/: AstExprTest.cpp  AstStmtTest.cpp  AstTestFixture.cpp  CompilerTestFixture.cpp  ConstEvalTest.cpp
glsld-wrapper/include/: CommandLine.h
glsld-wrapper/src/: Main.cpp
glsld/include/: AstHelper.h  Declaration.h  DocumentSymbol.h  ExternalSymbol.h  GlsldFileSystemProvider.h  Hover.h  InlayHints.h  IntellisenseProvider.h  LanguageQueryProvider.h  LanguageQueryVisitor.h  LanguageServer.h  LanguageServerInterface.h  LanguageService.h  Markdown.h  ModuleVisitor.h  ObjectMapper.h  PPInfoCollector.h  PreprocessInfoCache.h  Protocol.h  SourceText.h  StandardDocumentation.h  TextEdit.h  ThreadingService.h  TransportService.h  Uri.h
glsld/src/: CodeCompletion.cpp  Declaration.cpp  DocumentColor.cpp  DocumentSymbol.cpp  Hover.cpp  InlayHint.cpp  LanguageQueryProvider.cpp  LanguageServer.cpp  LanguageService.cpp  Reference.cpp  SemanticTokens.cpp  SignatureHelp.cpp  StandardDocumentation.cpp  TransportService.cpp  main.cpp
glslp/include/: CommandLine.h  FlatSet.h  Nfa.h
include/: AstDecl.h  AstExpr.h  AstMisc.h  AstStmt.h  AstVisitor.h  Common.h  Compiler.h  DiagnosticContext.h  DiagnosticManager.h  GlslExprOp.inc  GlslKeywords.inc  GlslPunctuation.inc  Language.h  LanguageServer.h  LanguageServerInterface.h  LanguageService.h  LexContext.h  ObjectMapper.h  ParseContext.h  ParsedAst.h  Preprocessor.h  Protocol.h  ProtocolDispatch.h  Semantic.h  SourceManager.h  SyntaxToken.h  SyntaxTree.h  ThreadingService.h  Tokenizer.h  TransportService.h  Typing.h
other/: Ast.h  AstBase.cpp  AstBase.h  AstDecl.h  AstExpr.h  AstImpl.h  AstMisc.h  AstPayload.h  AstStmt.h  TypeChecker.cpp  TypeChecker.h
script/: test-coverage.ps1  test-coverage.sh
share/: AppVersion.h
src/: ParseContext.cpp  grammar.txt  main.cpp
test/: DefaultLibrary.glsl  GenerateDefaultLibrary.py  test.frag
(+436 files in other folders)
